# Human-pose-as-compositional-tokens

./: .gitignore  README.md  data.ipynb  infer.ipynb  notes  pyproject.toml
api/: models.py
model/: backbone.py  encoder.py  vae.ipynb
my_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
process/: data.py
train/: stage1.py  stage2.py
