[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
authors = [
  { name = "Vishwa", email = "vishwateja2684@example.com" },
]
description = "package under build"
dependencies = []
[tool.setuptools]
packages = ["model","process"]